<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion de budget</string>
    <string name="action_quitter">Quitter</string>
    <string name="main.connect">Connexion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_budget">Budget</string>
    <string name="resume_total_now">--</string>
    <string name="resume_total_fin_mois">--</string>
    <string name="resume_total_categorie">Catégorie.</string>
    <string name="resume_total_argent_avance">Argent avancé</string>
    <string name="resume_total_argent_reel">Solde réel</string>
    <string name="main.connect.openshift">OpenShift</string>
    <string name="budget_categorie">Catégories</string>
    <string name="action_budget_deconnecter">Déconnecter</string>
    <!-- Color -->
    <string name="color_fond_tableau">#34495e</string>
    <string name="color_text_tableau">#ffffff</string>
    <string name="alp_42447968_cmd_confirm">Valider</string>
    <string name="alp_42447968_cmd_continue">Valider</string>
    <string name="alp_42447968_cmd_forgot_pattern">Pattern oublié ?</string>
    <string name="alp_42447968_cmd_retry">Réessayer</string>
    <string name="alp_42447968_loading">Chargement…</string>
    <string name="alp_42447968_lockscreen_access_pattern_cell_added">Cell ajouté</string>
    <string name="alp_42447968_lockscreen_access_pattern_cleared">Pattern effacé</string>
    <string name="alp_42447968_lockscreen_access_pattern_detected">Pattern completé</string>
    <string name="alp_42447968_lockscreen_access_pattern_start">Pattern démarré</string>
    <string name="alp_42447968_msg_connect_4dots">Le pattern doit avoir au moins 4 points.\nReessayez…</string>
    <string name="alp_42447968_msg_draw_an_unlock_pattern">Dessinez un nouveau pattern :</string>
    <string name="alp_42447968_msg_draw_pattern_to_unlock">Dessinez le pattern pour vous connecter :</string>
    <string name="alp_42447968_msg_pattern_recorded">Pattern enregistré</string>
    <string name="alp_42447968_msg_redraw_pattern_to_confirm">Redessinez le pattern pour valider:</string>
    <string name="alp_42447968_msg_release_finger_when_done">Levez le doigt lorsque vous avez terminé</string>
    <string name="alp_42447968_msg_try_again">Incorrect. Réessayez</string>
    <string name="alp_42447968_msg_your_new_unlock_pattern">Votre nouveau pattern:</string>
    <string name="main.connect.pattern">Charger compte</string>
    <string name="main.connect.save.pattern">Sauvegarder compte</string>
    <string name="main.login">Login</string>
    <string name="main.motpasse">Mot de passe</string>
    <string name="main.connexion">Connexion</string>

    <plurals name="alp_42447968_pmsg_connect_x_dots">
        <item quantity="one">Connectez au moins %1$d points.\nRéessayez…</item>
        <item quantity="other">Connectez au moins %1$d points.\nRéessayez…</item>
    </plurals>

    <string name="title_activity_connexion">ConnexionActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
