<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    tools:context="android.finances.terrier.com.budget.ihm.vue.BudgetActivity$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/bordereau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_dark">

        <TextView
            android:id="@+id/budgetText"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:background="@android:color/background_dark"
            android:text="Budget "
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/budget_selectCompte"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bordereau2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bordereau"
        android:background="@android:color/background_dark">

        <TextView
            android:id="@+id/budget_moisText"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="de Decembre 2015"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableTotaux"
        android:layout_width="fill_parent"
        android:layout_height="110dip"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bordereau2">

        <TableRow>

            <TextView
                android:width="125dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/budget_categorie"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/resume_total_now"
                android:width="118dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_now"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/resume_total_fin_mois"
                android:width="118dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_fin_mois"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow>

            <TextView
                android:width="125dp"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_argent_avance"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/resume_total_now_argent_avance"
                android:width="118dp"
                android:gravity="right"
                android:padding="3dip"
                android:text="-- €" />

            <TextView
                android:id="@+id/resume_total_fin_argent_avance"
                android:width="118dp"
                android:gravity="right"
                android:padding="3dip"
                android:text="-- €" />
        </TableRow>

        <TableRow>

            <TextView
                android:width="125dp"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_argent_reel"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/resume_total_now_argent_reel"
                android:width="118dp"
                android:gravity="right"
                android:padding="3dip"
                android:text="-- €" />

            <TextView
                android:id="@+id/resume_total_fin_argent_reel"
                android:width="118dp"
                android:gravity="right"
                android:padding="3dip"
                android:text="-- €" />
        </TableRow>

        <TableRow android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/resume_categorie_2"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/budget_categorie"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/resume_total_now2"
                android:width="118dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_now"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/resume_total_fin_mois2"
                android:width="118dp"
                android:background="#004f8a"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/resume_total_fin_mois"
                android:textColor="#ffffff" />
        </TableRow>

    </TableLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tableTotaux" />

</RelativeLayout>
